tests/dataset/tpc-ds/compiler/kotlin/q52.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q52.kt:91:72: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun BigDecimal.unaryMinus(): BigDecimal defined in kotlin
@InlineOnly public inline operator fun BigInteger.unaryMinus(): BigInteger defined in kotlin
}.sortedBy { mutableListOf((it as MutableMap<String, Any?>)["d_year"], -(it as MutableMap<String, Any?>)["ext_price"], (it as MutableMap<String, Any?>)["brand_id"]) as Comparable<Any> }
                                                                       ^
